tui/src/snapshots/codex_tui__app_server_render__tests__prompt_footer_external_editor_override.snap
---
source: tui/src/app_server_render.rs
expression: "render_prompt_footer_line(InputMode::Vibe, Some(PromptFooterOverride::ExternalEditorHint))"
---
   Save and close external editor to continue.

