tui/src/snapshots/codex_tui__app_server_render__tests__prompt_footer_includes_external_editor.snap
---
source: tui/src/app_server_render.rs
expression: render_prompt_footer_line(None)
---
  ctrl+g external editor
