tui/src/snapshots/codex_tui__app_server_render__tests__render_only_coalesced_success_ran_cells.snap
---
source: tui/src/app_server_render.rs
expression: "lines_to_plain_strings(&lines).join(\"\\n\")"
---
• Ran git status --porcelain=v1
      git --no-pager log -5 --oneline
