tui/src/snapshots/codex_tui__app_server_render__tests__render_only_coalesces_explored_cells.snap
---
source: tui/src/app_server_render.rs
expression: rendered
---
• Explored
  └ Read AGENTS.override.md
    List .codexpotter
    List .codexpotter
    Read MAIN.md, developer_prompt.md
