tui/src/snapshots/codex_tui__app_server_render__tests__render_only_context_compacted_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---







› Explain this: `1 + 1`.


• Context compacted
