tui/src/snapshots/codex_tui__app_server_render__tests__render_only_end_to_end_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---













› Explain this: `1 + 1`.


• ## Result

  - Answer: 2

  printf 'hello\n'

• Ran printf 'line\n'

• Edited example.txt (+1 -1)
    1 -old
    1 +new
