tui/src/snapshots/codex_tui__app_server_render__tests__render_only_flushes_explored_cells_on_turn_complete.snap
---
source: tui/src/app_server_render.rs
expression: rendered
---
• Explored
  └ Read AGENTS.override.md
